# xmlValidor

./: CMakeLists.txt  README.md
src/cli/: main.cpp
src/infrastructure/factory/: ChildDtdFactory.cpp  ChildDtdFactory.h  ElementDtdFactory.cpp  ElementDtdFactory.h
src/infrastructures/factories/: ChildDtdFactory.cpp  ChildDtdFactory.h  ElementDtdFactory.cpp  ElementDtdFactory.h  ElementXmlFactory.cpp  ElementXmlFactory.h
src/infrastructures/factories/ChildDtdFactory/: ChildDtdFactory.h  ChildDtdFactoryRef.cpp  ChildDtdFactoryRef.h
src/infrastructures/factories/ElementDtdFactory/: ElementDtdFactory.h  ElementDtdFactoryRef.cpp  ElementDtdFactoryRef.h
src/infrastructures/services/: XmlParserService.cpp  XmlParserService.h
src/model/: ChildDtd.cpp  ChildDtd.h  DTD.cpp  DTD.h
src/model/dtd/: DTD.cpp  DTD.h  Element.cpp  Element.h
src/models/: ChildDtd.cpp  ChildDtd.h  DTD.cpp  DTD.h  ElementDtd.cpp  ElementDtd.h  ElementXml.cpp  ElementXml.h
src/models/ChildDtd/: ChildDtd.cpp  ChildDtd.h  ChildDtdOnlyOneNameException.h  ChildDtdRef.cpp  ChildDtdRef.h  IChildDtd.h  OccurrenceChildDtd.h
src/models/DTD/: DTD.cpp  DTD.h  DTDRef.cpp  DTDRef.h  ElementDtdNotFoundException.h
src/models/ElementDtd/: ChildDtdNotFoundException.h  ElementDtd.h  ElementDtdRef.cpp  ElementDtdRef.h
src/use_case/: Turtle.cpp  simpleFunction.h
src/use_cases/: Painter.h  Turtle.h  simpleFunction2.h
src/use_cases/example_gtest/: Painter.cpp  Turtle.h  simpleFunction.cpp  simpleFunction2.cpp
src/use_cases/parseDTD/: ParseChildDtd.h  ParseChildDtdRef.cpp  ParseChildDtdRef.h
src/use_cases/parsingDTD/: ParsingChildDtd.h  ParsingChildDtdRef.cpp  ParsingChildDtdRef.h
src/utils/: FileReader.cpp  FileReader.h  StringUtils.cpp  StringUtils.h
test/models/: ElementXmlTest.cpp
test/use_case/: PainterTests.cpp  simpleFunction2Test.cpp  simpleFunctionTest.cpp
test/use_case/Mock/: MockTurtle.h
tests/: main.cpp
tests/infrastructures/Mock/: MockChildDtdFactory.h
tests/integration/infrastructures/: ChildDtdFactoryIntegration.cpp  ChildDtdFactoryTest.cpp  ElementDtdFactoryIntegration.cpp  ElementDtdFactoryTest.cpp
tests/integration/parseDTD/: ParseChildDtdIntegration.cpp
tests/models/: ChildDtdRefTest.cpp  ChildDtdTest.cpp  DTDTest.cpp  ElementDtdRefTest.cpp  ElementDtdTest.cpp  ElementXmlTest.cpp
tests/models/Mock/: MockChildDtd.h  MockElementDtd.h
tests/use_cases/: PainterTests.cpp  simpleFunction2Test.cpp  simpleFunctionTest.cpp
tests/use_cases/Mock/: MockTurtle.h
tests/use_cases/example_gtest/: PainterTests.cpp  simpleFunction2Test.cpp  simpleFunctionTest.cpp
tests/use_cases/example_gtest/Mock/: MockTurtle.h
tests/use_cases/parseDTD/: ParseChildDtdTest.cpp
tests/use_cases/parsingDTD/: ParsingChildDtd.cpp
tests/utils/: StringUtilsTest.cpp
